--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -100,6 +100,7 @@
     "swiper": "^9.3.2",
     "swr": "^2.1.5",
     "typescript": "^5.1.3",
+    "url-parse": "^1.5.10",
     "wagmi": "^1.2.0",
     "zod": "^3.21.4",
     "polished": "^4.2.2",
